--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -84,8 +84,6 @@
 
 @mixin fade-state {
   opacity: 0;
-}.resources-view {
-  padding: 1rem;
 }
 
 .page-header {
@@ -109,4 +107,40 @@
 
 .custom-table :deep(.p-datatable-tbody > tr > td) {
   border: 1px solid #000000;
+}
+
+.filters {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1.5rem;
+  flex-wrap: wrap;
+}
+
+.filter-group {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  min-width: 250px;
+}
+
+.p-float-label {
+  display: flex;
+  gap: 0.5rem
+}
+
+@media (max-width: 768px) {
+  .filters {
+    flex-direction: column;
+    gap: 0.75rem;
+  }
+
+  .filter-group {
+    width: 100%;
+  }
+}
+
+.form-section {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 }
