--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -99,6 +99,11 @@
   gap: 0.5rem;
 }
 
+.header-buttons .p-button {
+  min-width: 130px;
+  flex: 1;
+}
+
 .custom-table :deep(.p-datatable-thead > tr > th) {
   background-color: #f0f0f0c5;
   border: 1px solid #000000;
@@ -140,7 +145,27 @@
 }
 
 .form-section {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.form-row {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.form-label {
+    width: 100px;
+    text-align: left;
+}
+
+.form-input {
+    width: 200px;
+}
+
+/* Special case for calendar */
+.form-input.p-calendar .p-inputtext {
+    width: 100%;
 }
