--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,4 +1,3 @@
-// src/styles/_layout.scss
 @use 'variables' as vars;
 @use 'mixins' as mix;
 
@@ -125,10 +124,12 @@
   display: flex;
   flex: 1;
   flex-direction: row;
+  min-width: vars.$min-width;
+  row-gap: 200px;
 }
 
 .select {
-  min-width: 250px;
+  min-width: vars.$min-width;
 }
 
 .p-float-label {
